--- a/anything.html
+++ b/anything.html
@@ -8,3 +8,6 @@
 <p>
     احس احسن شي
 </p>
+<img src="./Golf With Your Friends Screenshot 2022.02.14 - 20.31.03.17.png" alt="اي شي" width="450px" height="450px">
+<a href="./anything2.html">رابط الى صفحتي الثانية </a>
+<!--2-3-2022  -->
