--- a/anything.html
+++ b/anything.html
@@ -1,13 +1,18 @@
-<title>
-الصفحة الاولى
-</title>
-<h1>عبدالعزيز الوزان</h1>
-<h2>
-    هذا موقعي الاول
-</h2>
-<p>
-    احس احسن شي
-</p>
-<img src="./Golf With Your Friends Screenshot 2022.02.14 - 20.31.03.17.png" alt="اي شي" width="450px" height="450px">
-<a href="./anything2.html">رابط الى صفحتي الثانية </a>
-<!--2-3-2022  -->
+<html>
+  <head>
+    <title>الصفحة الاولى</title>
+  </head>
+  <body>
+    <h1>عبدالعزيز الوزان</h1>
+    <h2>هذا موقعي الاول</h2>
+    <p>احس احسن شي</p>
+    <img
+      src="./Golf With Your Friends Screenshot 2022.02.14 - 20.31.03.17.png"
+      alt="اي شي"
+      width="450px"
+      height="450px"
+    />
+    <a href="./anything2.html">رابط الى صفحتي الثانية </a>
+    <!--2-3-2022  -->
+  </body>
+</html>
