--- a/anything.html
+++ b/anything.html
@@ -1,5 +1,9 @@
 <html>
   <head>
+    <link
+      rel="icon"
+      href="./Golf With Your Friends Screenshot 2022.02.14 - 20.31.03.17.png"
+    />
     <title>الصفحة الاولى</title>
   </head>
   <body>
